force-app/main/default/objects/APXTConga4__Conga_Solution__c/APXTConga4__Conga_Solution__c.object-meta.xml
<CustomObject>
    <label>Conga Solution</label>
    <nameField>
        <label>Conga Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>