force-app/main/default/objects/APXTConga4__Conga_Solution__c/fields/APXTConga4__Button_body_field__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Button_body_field__c</fullName>
    <label>Button Body (URL)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>