force-app/main/default/objects/APXTConga4__Conga_Solution__c/fields/APXTConga4__CongaEmailTemplateCount__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__CongaEmailTemplateCount__c</fullName>
    <label>Conga Email Template Count</label>
    <summaryForeignKey>APXTConga4__Conga_Solution_Email_Template__c.APXTConga4__Conga_Solution__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>