force-app/main/default/objects/APXTConga4__Conga_Solution__c/fields/APXTConga4__Formula_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Formula_Field_API_Name__c</fullName>
    <label>Formula Field API Name</label>
    <type>TextArea</type>
</CustomField>