force-app/main/default/objects/APXTConga4__Conga_Solution__c/fields/APXTConga4__Launch_C8_Formula_Button__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Launch_C8_Formula_Button__c</fullName>
    <formula>IF( OR(APXTConga4__Sample_Record_Id__c = &quot;&quot;,  APXTConga4__Button_Link_API_Name__c = &quot;&quot;), IMAGE( &quot;/resource/DisabledLaunchButton&quot; , &quot;Launch Composer&quot;), 

HYPERLINK(&quot;https://&quot; &amp; MID( $Api.Enterprise_Server_URL_320, FIND(&quot;://&quot;, $Api.Enterprise_Server_URL_100)+3, FIND( &quot;.com&quot;, $Api.Enterprise_Server_URL_100 )-4) 
&amp; &quot;servlet/servlet.Integration?lid=&quot; &amp; APXTConga4__Weblink_Id__c 
&amp; &quot;&amp;eid=&quot; &amp; APXTConga4__Sample_Record_Id__c &amp; &quot;&amp;ic=1&quot; 
, IMAGE( &quot;/resource/ComposerLaunchButton&quot; , &quot;Launch Composer&quot;), &quot;_blank&quot; ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Launch</label>
    <type>Text</type>
</CustomField>