force-app/main/default/objects/APXTConga4__Conga_Solution__c/fields/APXTConga4__Master_Object_Type_Validator__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Master_Object_Type_Validator__c</fullName>
    <label>Master Object Type Validator</label>
    <type>TextArea</type>
</CustomField>