force-app/main/default/objects/APXTConga4__Conga_Solution__c/fields/APXTConga4__Sample_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Sample_Record_Id__c</fullName>
    <label>Sample Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>